--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.378.0",
+    "@types/aws-lambda": "^8.10.119",
     "@types/node": "^20.4.5",
     "@types/tmi.js": "^1.8.3",
+    "aws-lambda": "^1.0.7",
     "typescript": "^5.1.6"
   }
 }
